# wbparser

./: .env.example  .gitignore  Procfile.dev  README.md  admin.yml.example  docker-compose.yml
bridge/: .env.example  Dockerfile  README.md  pyproject.toml
bridge/bridge/: __init__.py  cli.py  config.py  maxapi_client.py  parser_client.py  translator.py  worker.py
bridge/tests/: conftest.py  test_translator.py  test_worker_e2e.py
configs/: categories.yml  excluded_articles.yml  scoring.yml  search_queries.yml  stop_words.yml  trend_keywords.yml
data/outbox/: ready_posts_sample.json
docs/: channel_analysis_report.txt  integration_plan.md  marketplace_parsing_logic_report.txt  operating_guide.md  wb_parser_development_prompt.txt  wb_parser_implementation_report.txt
maxapi/: Dockerfile  README.md  openapi.yml  pyproject.toml
maxapi/api/: README.md  __init__.py  client.py  config.py  deps.py  errors.py  ids.py  main.py  pagination.py  security.py  storage.py
maxapi/api/backends/: __init__.py  memory.py  protocol.py  pymax_backend.py
maxapi/api/models/: __init__.py  accounts.py  channels.py  common.py  health.py  jobs.py  media.py  posts.py  schedules.py  webhooks.py
maxapi/api/routers/: __init__.py  accounts.py  channels.py  health.py  jobs.py  media.py  posts.py  schedules.py  webhooks.py
maxapi/tests/: conftest.py  test_accounts.py  test_auth.py  test_channels_and_posts.py  test_client_sdk.py  test_health.py  test_jobs.py  test_markdown_parser.py  test_webhooks_and_media.py
parser/: .env.example  Dockerfile  README.md  pyproject.toml
parser/app/: cli.py  config.py  logging_config.py
parser/app/api/: main.py  routes_admin.py  routes_health.py  routes_metrics.py  routes_posts.py  routes_products.py  routes_webhooks_maxapi.py
parser/app/clients/: __init__.py  affiliate.py  telegram_metrics.py  wildberries.py
parser/app/db/: __init__.py  models.py  repositories.py  session.py
parser/app/db/migrations/: README.md
parser/app/schemas/: __init__.py  metrics.py  post.py  product.py
parser/app/services/: __init__.py  collect_candidates.py  daily_planner.py  deduplication.py  filter_products.py  media_selector.py  normalize_product.py  outbox.py  post_builder.py  review_analyzer.py  scheduler.py  score_products.py
parser/app/utils/: __init__.py  retries.py  text.py  time.py  urls.py
parser/tests/: conftest.py  test_api_contract.py  test_daily_planner.py  test_filters.py  test_normalize_product.py  test_post_builder.py  test_scoring.py  test_webhooks_maxapi.py
parser/tests/fixtures/: ready_post.json  wb_product.json  wb_search.json
scripts/: run_local_stack.ps1  stop_local_stack.ps1
wbpost/: Dockerfile  pyproject.toml
wbpost/tests/: test_config.py  test_login.py  test_state.py
wbpost/wbpost/: __init__.py  cli.py  config.py  login.py  maxapi_client.py  parser_client.py  state.py
